--- a/index.ipynb
+++ b/index.ipynb
@@ -39,11 +39,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.08333333333333333"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your solution"
+    "# Your solution\n",
+    "p_heads = 1/2\n",
+    "p_three = 1/6\n",
+    "\n",
+    "p_heads * p_three"
    ]
   },
   {
@@ -56,11 +71,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7290000000000001"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your Solution"
+    "# Your Solution\n",
+    "p_pizza = 9/10\n",
+    "\n",
+    "p_three_students = p_pizza * p_pizza * p_pizza\n",
+    "p_three_students"
    ]
   },
   {
@@ -75,11 +105,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your solution "
+    "# Your solution \n",
+    "p_strberry_given_choc = 0.35 / 0.7\n",
+    "p_strberry_given_choc"
    ]
   },
   {
@@ -99,11 +142,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.004524886877828055"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your solution"
+    "# Your solution\n",
+    "p_ace_1 = 4/52\n",
+    "p_ace_2 = 3/51\n",
+    "\n",
+    "p_two_consec_aces = p_ace_1 * p_ace_2\n",
+    "p_two_consec_aces"
    ]
   },
   {
@@ -119,11 +178,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8559987631416203"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your solution"
+    "P_A1 = 95/100\n",
+    "\n",
+    "#First chosen item was functioning, the second item will be chosen from 94 functioing units and 5 defective units\n",
+    "P_A2_given_A1 = 94/99\n",
+    "\n",
+    "# Given that the first and second chosen items were okay, the third item will be chosen from 93 good units and 5 defective units, thus\n",
+    "P_A3_given_A2_A1 = 93/98\n",
+    "\n",
+    "# Accoring to chain rule\n",
+    "P_A1_A2_A3 = P_A1 * P_A2_given_A1 * P_A3_given_A2_A1\n",
+    "\n",
+    "P_A1_A2_A3"
    ]
   },
   {
@@ -153,11 +234,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your solution"
+    "Ω = 36 # 36 possible outcomes\n",
+    "Event B - P(A ∩ B) = 4/36 - 4 possible outcomes out of 36 - (2 and 6, 3 and 5, 6 and 2, 5 and 3)\n",
+    "Event A - P(A) = 20/36 - 20 possible outcomes out of 36 - ( 5 in each case * 4 )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.19999999999999998"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# P(B|A)\n",
+    "p_B_given_A = (4/36)/(20/36) \n",
+    "p_B_given_A"
    ]
   },
   {
@@ -188,11 +293,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your solution"
+    "# 𝑃(𝐵∣𝐴)\n",
+    "p_B_given_A = 0.25/0.5  \n",
+    "p_B_given_A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 𝑃(𝐵'∣𝐴)\n",
+    "p_B_prime_given_A = 1 - 0.5\n",
+    "p_B_prime_given_A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.625"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 𝑃(A∣B)\n",
+    "p_A_given_B = 0.25/0.4\n",
+    "p_A_given_B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.375"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 𝑃(A'∣B)\n",
+    "p_A_prime_given_B = 1 - 0.625 \n",
+    "p_A_prime_given_B"
    ]
   },
   {
@@ -207,9 +391,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "learn-env",
    "language": "python",
-   "name": "python3"
+   "name": "learn-env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -221,7 +405,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
